force-app/main/default/objects/Production_Position__c/Production_Position__c.object-meta.xml
<CustomObject>
    <description>This object is used in order to designate what position a person fulfilled on a production. This will be a junction object, providing a many-to-many relationship between the Person and Production custom objects.</description>
    <label>Production Position</label>
    <nameField>
        <displayFormat>ProdPos-{00000}</displayFormat>
        <label>Production Position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>