force-app/main/default/objects/Production_Position__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <label>Person</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Production Positions</relationshipLabel>
    <relationshipName>Production_Positions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>