force-app/main/default/objects/Production_Position__c/fields/Position_Type__c.field-meta.xml
<CustomField>
    <fullName>Position_Type__c</fullName>
    <label>Position Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Actor</fullName>
            </value>
            <value>
                <fullName>Cinematographer</fullName>
            </value>
            <value>
                <fullName>Composer</fullName>
            </value>
            <value>
                <fullName>Costume Design</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Makeup Artist</fullName>
            </value>
            <value>
                <fullName>Musician</fullName>
            </value>
            <value>
                <fullName>Producer</fullName>
            </value>
            <value>
                <fullName>Set Design</fullName>
            </value>
            <value>
                <fullName>Sound Mixing</fullName>
            </value>
            <value>
                <fullName>Writer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>