force-app/main/default/objects/Production_Position__c/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <label>Production</label>
    <referenceTo>Production__c</referenceTo>
    <relationshipLabel>Production Positions</relationshipLabel>
    <relationshipName>Production_Positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>